tests/NormalTests/paczka1/fuzzy1/38989730.err
Error in line 2: iYYzAah S329 63,8
Error in line 7: A45I S329 1I0,0
Error in line 4: 5QDukkk A457 26,9
Error in line 9: blCV1wQtb A431 67,5
Error in line 14: blCV1wQtb A457 91,4
Error in line 15: blCV1wQtb A431 42,1
Error in line 17: ZJuAG0 A431 413,7
Error in line 26: ZJuAG0 S329 71,5
Error in line 28: lJiwqGw A43k 24,0
Error in line 5: A457 S329 50,6
Error in line 27: ZJuAG0 S62 80,6
